@@ -1,5 +1,6 @@
 2020-XX-YY v. 2.1.0
 ---------------------
+- Added a message to dnfdragora-update if user force a check for updates
 - Added new Otions dialog
 - Added Help dialog
 - Fixed loop in case of GPG key missing if OnGPGImport is not received
